tests/src/frontend/typechecking/invalid/embedded_freeze.sk
fun main(): void {
  _ = freeze(mutable Vector[1, 2, 3]);
}
